--- a/zsh/zsh.conf
+++ b/zsh/zsh.conf
@@ -13,6 +13,12 @@ fi
 export ZSH="$HOME/.oh-my-zsh"
 export HDF5_DIR="/opt/homebrew/opt/hdf5"
 export BLOSC_DIR="/opt/homebrew/opt/c-blosc"
+export LZO_DIR="$(brew --prefix lzo)"
+export BZIP2_DIR="$(brew --prefix bzip2)"
+# export LZ0_DIR=="/opt/homebrew/Cellar/lzo"
+# export BZIP2_DIR=="/opt/homebrew/Cellar/bzip2"
+export CFLAGS="-I/$(brew --prefix)/include"
+export CXXFLAGS="-I/$(brew --prefix)/include"
 export PATH="/opt/homebrew/anaconda3/envs/pyenv/lib/python3.9/site-packages/:$PATH"
 # export NPM="/opt/homebrew/anaconda3/envs/pyenv/lib/python3.9/site-packages/npm"
 
@@ -114,7 +120,7 @@ source $ZSH/Oh-my-zsh.sh
 # Example aliases
 alias vim="nvim"
 alias v="nvim"
-alias zsh.config="nvim ~/.zshrc"
+alias zsh.config="nvim ~/.config/zsh/zsh.conf"
 # alias plug="nvim ~/.config/nvim/vim-plug/plugins.vim"
 # alias init.vim="nvim ~/.config/nvim/init.vim"
 alias alacritty.config="nvim ~/.config/alacritty/alacritty.yml"
@@ -143,12 +149,12 @@ finish() {
 
 pres() {
   local name="$1"
-  cp -r ~/.config/templates/presenations/default "$name"
+  cp -r ~/.config/templates/presentations/default "$name"
 }
 
 min_pres() {
   local name="$1"
-  cp -r ~/.config/templates/presenations/minimal "$name"
+  cp -r ~/.config/templates/presentations/minimal "$name"
 }
 
 # To customize prompt, run `p10k configure` or edit ~/.p10k.zsh.
