randomly committing the status quo

--- a/zsh/zsh.conf
+++ b/zsh/zsh.conf
@@ -127,7 +127,7 @@ alias alacritty.config="nvim ~/.config/alacritty/alacritty.yml"
 alias cond.d="conda deactivate"
 alias cond.a="conda activate"
 # alias settings.vim="nvim ~/.config/nvim/general/settings.vim"
-alias m="~/Documents/Master"
+alias u="~/Documents/Uni/"
 alias commit="git commit -m \"randomly committing the status quo\""
 alias ssd="/Volumes/Zexy_SSD"
 
