randomly committing the status quo

--- a/zsh/zsh.conf
+++ b/zsh/zsh.conf
@@ -130,6 +130,7 @@ alias cond.a="conda activate"
 alias u="~/Documents/Uni/"
 alias commit="git commit -m \"randomly committing the status quo\""
 alias ssd="/Volumes/Zexy_SSD"
+alias m="~/Documents/Uni/MA_NM_SS/"
 
 apa() {
   local name="$1"
@@ -140,6 +141,11 @@ apa() {
 min() {
   local name="$1"
   cp -r ~/.config/templates/minimal "$name"
+}
+
+rmin() {
+  local name="$1"
+  cp -r ~/.config/templates/minimal_RNW "$name"
 }
 
 finish() {
