--- a/zsh/zsh.conf
+++ b/zsh/zsh.conf
@@ -90,8 +90,8 @@ DISABLE_UNTRACKED_FILES_DIRTY="true"
 # Add wisely, as too many plugins slow down shell startup.
 
 # starting tmux
-plugins=(tmux)
-ZSH_TMUX_AUTOSTART=true
+# plugins=(tmux)
+# ZSH_TMUX_AUTOSTART=true
 
 source $ZSH/Oh-my-zsh.sh
 
@@ -131,6 +131,7 @@ alias u="~/Documents/Uni/"
 alias commit="git commit -m \"randomly committing the status quo\""
 alias ssd="/Volumes/Zexy_SSD"
 alias m="~/Documents/Uni/MA_NM_SS/"
+alias main="cd TexFiles && v main.rnw"
 
 apa() {
   local name="$1"
@@ -186,6 +187,7 @@ conda activate pyenv
 # figlet Welcome, ${USER} | cowsay --character yoda
 # cowsay --character ghostbusters | figlet let\'s fuck shit up
 # figlet let\'s fuck shit up | cowsay -n -f head-in | lolcat
-tmux source ~/.config/tmux/tmux.conf
+# tmux source ~/.config/tmux/tmux.conf
 
+typeset -g POWERLEVEL9K_INSTANT_PROMPT=quiet
 figlet The more you fuck around \.\.\. | cowsay -n -f head-in | lolcat
