--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -1,36 +1,36 @@
 # Set ture color; Alacritty
-set -g default-terminal "xterm-256color"
-set-option -ga terminal-overrides ",xterm-256color:Tc"
-
-#set-option -g prefix C-Space
-set-option -g prefix C-b
-unbind C-b
-bind C-b send-prefix
-
-# Shift Alt vim keys to switch windows
-bind -n M-H previous-window
-bind -n M-L next-window
-
-# Mouse support
-set -g mouse on
-
-# Plugins
-set -g @plugin 'tmux-plugins/tpm'
-set -g @plugin 'tmux-plugins/tmux-sensible'
-set -g @plugin 'christoomey/vim-tmux-navigator'
-set -g @plugin 'catppuccin/tmux'
-set -g @plugin 'tmux-plugins/tmux-yank'
-
-run '~/.tmux/plugins/tpm/tpm'
-
-# set vi-mode
-set-window-option -g mode-keys vi
-
-# keybindings
-bind-key -T copy-mode-vi v send-keys -X begin-selection
-bind-key -T copy-mode-vi C-v send-keys -X rectangle-selection
-bind-key -T copy-mode-vi y send-keys -X copy-selection-and-cancel
-
-# Open panes in current directory
-bind '"' split-window -v -c "#{pane_current_path}"
-bind % split-window -h -c "#{pane_current_path}"
+# set -g default-terminal "xterm-256color"
+# set-option -ga terminal-overrides ",xterm-256color:Tc"
+#
+# #set-option -g prefix C-Space
+# set-option -g prefix C-b
+# unbind C-b
+# bind C-b send-prefix
+#
+# # Shift Alt vim keys to switch windows
+# bind -n M-H previous-window
+# bind -n M-L next-window
+#
+# # Mouse support
+# set -g mouse on
+#
+# # Plugins
+# set -g @plugin 'tmux-plugins/tpm'
+# set -g @plugin 'tmux-plugins/tmux-sensible'
+# set -g @plugin 'christoomey/vim-tmux-navigator'
+# set -g @plugin 'catppuccin/tmux'
+# set -g @plugin 'tmux-plugins/tmux-yank'
+#
+# run '~/.tmux/plugins/tpm/tpm'
+#
+# # set vi-mode
+# set-window-option -g mode-keys vi
+#
+# # keybindings
+# bind-key -T copy-mode-vi v send-keys -X begin-selection
+# bind-key -T copy-mode-vi C-v send-keys -X rectangle-selection
+# bind-key -T copy-mode-vi y send-keys -X copy-selection-and-cancel
+#
+# # Open panes in current directory
+# bind '"' split-window -v -c "#{pane_current_path}"
+# bind % split-window -h -c "#{pane_current_path}"
