randomly committing the status quo

--- a/zsh/zsh.conf
+++ b/zsh/zsh.conf
@@ -123,15 +123,31 @@ alias v="nvim"
 alias zsh.config="nvim ~/.config/zsh/zsh.conf"
 # alias plug="nvim ~/.config/nvim/vim-plug/plugins.vim"
 # alias init.vim="nvim ~/.config/nvim/init.vim"
-alias alacritty.config="nvim ~/.config/alacritty/alacritty.yml"
+alias alacritty.config="nvim ~/.config/alacritty/alacritty.toml"
 alias cond.d="conda deactivate"
 alias cond.a="conda activate"
 # alias settings.vim="nvim ~/.config/nvim/general/settings.vim"
 alias u="~/Documents/Uni/"
 alias commit="git commit -m \"randomly committing the status quo\""
 alias ssd="/Volumes/Zexy_SSD"
-alias m="~/Documents/Uni/MA_NM_SS/"
-alias main="cd TexFiles && v main.rnw"
+alias m="~/Documents/Uni/MasterAnalysis/"
+alias ls="lsd"
+# alias ls="colorls --group-directories-first"
+# alias lss="/bin/ls"
+# alias main="cd TexFiles && v main.rnw"
+
+function main() {
+  local mainFile="main.rnw"
+  
+  echo "Current directory: $PWD"
+
+  if [[ -e "$mainFile" ]]; then
+    nvim "$mainFile"
+  else
+    cd TexFiles && nvim "$mainFile"
+  fi
+}
+
 
 apa() {
   local name="$1"
@@ -190,4 +206,6 @@ conda activate pyenv
 # tmux source ~/.config/tmux/tmux.conf
 
 typeset -g POWERLEVEL9K_INSTANT_PROMPT=quiet
-figlet The more you fuck around \.\.\. | cowsay -n -f head-in | lolcat
+# figlet The more you fuck around \.\.\. | cowsay -n -f head-in | lolcat
+source ~/.config/zsh/start
+# source $(dirname $(gem which colorls))/tab_complete.sh
