--- a/zsh/zsh.conf
+++ b/zsh/zsh.conf
@@ -130,7 +130,7 @@ alias cond.a="conda activate"
 alias u="~/Documents/Uni/"
 alias commit="git commit -m \"randomly committing the status quo\""
 alias ssd="/Volumes/Zexy_SSD"
-alias m="~/Documents/Uni/MasterAnalysis/"
+alias m="~/Documents/Uni/MasterAnalysis/master"
 alias ls="lsd"
 # alias ls="colorls --group-directories-first"
 # alias lss="/bin/ls"
@@ -148,6 +148,15 @@ function main() {
   fi
 }
 
+find() {
+  local name="$1"
+  if [ -z ${var+x} ]; then
+    defaults write com.apple.Finder AppleShowAllFiles true
+  else
+    defaults write com.apple.Finder AppleShowAllFiles "$name"
+  fi
+  killall Finder
+}
 
 apa() {
   local name="$1"
@@ -178,6 +187,10 @@ pres() {
 min_pres() {
   local name="$1"
   cp -r ~/.config/templates/presentations/minimal "$name"
+}
+
+eigen() {
+  cp -r ~/.config/templates/Eigen ./Eigen
 }
 
 # To customize prompt, run `p10k configure` or edit ~/.p10k.zsh.
